--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Webpack Starter Kit</title>
 
     <!-- Don't forget to delete this style tag. -->
-    <style>
+    <!-- <style>
       body {
         min-height: 100vh;
         margin: 0;
@@ -31,7 +31,7 @@
         max-width: 100%;
         height: auto;
       }
-    </style>
+    </style> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   </head>
 
